force-app/main/default/objects/Context_Action__c/Context_Action__c.object-meta.xml
<CustomObject>
    <label>Context &amp; Action</label>
    <nameField>
        <label>Context or Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Context &amp; Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>