force-app/main/default/objects/Context_Action__c/fields/Atlan_Features_Used__c.field-meta.xml
<CustomField>
    <fullName>Atlan_Features_Used__c</fullName>
    <description>The Atlan features used to provide the context or accomplish the action.</description>
    <inlineHelpText>The Atlan features used to provide the context or accomplish the action.</inlineHelpText>
    <label>Atlan Features Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Atlan_Features</valueSetName>
    </valueSet>
</CustomField>