force-app/main/default/objects/Context_Action__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Action or Context</description>
    <inlineHelpText>Action or Context</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Context</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>