force-app/main/default/objects/Context_Action__c/fields/User_Quote_Examples__c.field-meta.xml
<CustomField>
    <fullName>User_Quote_Examples__c</fullName>
    <label>User Quote Examples</label>
    <length>255</length>
    <type>Text</type>
</CustomField>